# candle

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: verify.yaml
assets/: app.css
candle_viewer/: Cargo.toml
candle_viewer/src/: lib.rs
src/: main.rs
src/assets/: mod.rs
src/github/: mod.rs  organization.rs  repo.rs
src/remote/: mod.rs
src/state/: mod.rs
src/view/: dashboard.rs  mod.rs  nav.rs  org_changed.rs
src/view/components/: mod.rs
