[package]
name = "candle"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket ={version = "0.5.0"}
maud = {version = "0.26"}
octocrab = "0.42.1"
webbrowser = "1.0.3"

candle_viewer = { path = "candle_viewer" }
tokio = "1.42.0"
anyhow = "1.0.94"
static_hero_icons = "0.3.0"


[profile.dev]
opt-level = 0
